# voxelcraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Rollscape.sln  Rollscape.vcxproj
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
src/Blocks/: Block.cpp  BlockGeneration.cpp  BlockGeneration.hpp  Tree.hpp
src/Core/: Application.cpp  Application.hpp  GameState.hpp  ImGuiDriver.cpp  ImGuiDriver.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
src/Graphics/: LightSource.cpp  LightSource.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Vertex.hpp  VoxelShader.cpp  crosshair.vert  shader.frag  shader.vert
src/Physics/: AABB.hpp  Constants.hpp  Physics.cpp  Physics.hpp
src/UI/: HUD.cpp  HUD.hpp  MainMenu.cpp  MainMenu.hpp  OptionsMenu.cpp  OptionsMenu.hpp  TitleScreen.cpp  TitleScreen.hpp  UIElement.cpp  UIElement.hpp  UIManager.cpp  UIManager.hpp  UIState.hpp
src/World/: Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp  Player.cpp  Player.hpp  World.cpp  World.hpp  WorldNoise.cpp  WorldNoise.hpp
src/blocks/: Block.cpp  Block.hpp  BlockGeneration.cpp  BlockGeneration.hpp  BlockMesh.cpp  BlockMesh.hpp  Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp  Texture.cpp  Texture.hpp  World.cpp  World.hpp
src/graphics/: AABB.cpp  AABB.hpp  Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Face.hpp  IndexBuffer.cpp  IndexBuffer.hpp  LightSource.cpp  LightSource.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  Vec2Hashes.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VoxelShader.hpp  shader.frag  shader.vert
src/temp_blocks/: Block.cpp  Block.hpp  BlockGeneration.hpp
src/temp_graphics/: Texture.cpp
src/ui/: Application.cpp  Application.h
